--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,7 @@
 @import 'fonts.scss';
 @import 'body.scss';
 @import 'typo.scss';
+@import 'index.scss';
 @import 'form-controls.scss';
 @import 'customcheck.scss';
 @import 'btn.scss';
