--- a/src/scss/logo.scss
+++ b/src/scss/logo.scss
@@ -9,4 +9,21 @@
   span {
     color: $btn_bg_color;
   }
+
+  &.logo_main {
+    font-size: 20px;
+    @media (min-width: 992px) {
+      font-size: 25px;
+    }
+    @media (min-width: 1200px) {
+      font-size: 30px;
+    }
+    @media (min-width: 1400px) {
+      font-size: 35px;
+    }
+    @media (min-width: 1650px) {
+      font-size: 48px;
+    }
+  }
+
 }
