--- a/src/scss/typo.scss
+++ b/src/scss/typo.scss
@@ -81,43 +81,61 @@ h1 {
 }
 
 .h1_login {
-  font-family: $font_family2;
-  color: $font_color2;
+  font-family: $font_family;
+  color: $font_color;
   font-weight: 700;
-  font-size: 42px;
-  line-height: 60px;
-  margin: 0 0 35px;
-  text-align: center;
+  font-size: 41px;
+  line-height: 50px;
+  margin: 0 0 30px;
   text-transform: uppercase;
-  @media (min-width: 1200px) {
-    width: 671px;
-    text-align: left;
-    font-size: 32px;
-    line-height: 44px;
-    margin: 0 0 31px;
+  @media (min-width: 992px) {
+    font-size: 35px;
+    line-height: 40px;
+    margin: 0 0 20px;
   }
-  @media (min-width: 1500px) {
-    width: 671px;
-    font-size: 48px;
-    line-height: 66px;
+  @media (min-width: 1200px) {
+    font-size: 40px;
+    line-height: 50px;
+  }
+  @media (min-width: 1400px) {
+    font-size: 50px;
+    line-height: 56px;
+  }
+  @media (min-width: 1650px) {
+    font-size: 60px;
+    line-height: 68px;
   }
   @media (min-width: 1920px) {
-    width: 671px;
-    font-size: 61px;
-    line-height: 90px;
+    font-size: 80px;
+    line-height: 97px;
+    margin: 0 0 25px;
   }
-  .h1_row {
-    font-size: 28px;
-    @media (min-width: 1200px) {
-      font-size: 35px;
+  .h1_login-sub {
+    @media (min-width: 992px) {
+      font-size: 40px;
+      line-height: 48px;
     }
-    @media (min-width: 1500px) {
-      font-size: 49px;
+    @media (min-width: 1200px) {
+      font-size: 45px;
+      line-height: 55px;
+    }
+    @media (min-width: 1400px) {
+      font-size: 56px;
+      line-height: 64px;
+    }
+    @media (min-width: 1650px) {
+      font-size: 72px;
+      line-height: 80px;
     }
     @media (min-width: 1920px) {
-      font-size: 49px;
+      font-size: 86px;
+      line-height: 104px;
     }
   }
+}
+
+.colortitle {
+  color: $btn_bg_color;
 }
 
 h2 {
