--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -72,7 +72,7 @@ $user_list_title_color:     $btn_bg_color;
   border-radius: 100%;
 }
 
-@mixin img-mask($url, $top, $left, $width, $height) {
+@mixin img-mask($url, $top, $left, $width, $height, $bsize, $bpos) {
   &::after {
     content: '';
     display: block;
@@ -84,6 +84,8 @@ $user_list_title_color:     $btn_bg_color;
     width: $width;
     height: $height;
     background-image: url($url);
+    background-size: $bsize;
+    background-position: $bpos;
     z-index: 1;
   }
 }
