login (timer done)

--- a/src/html/views/dev-signup.html
+++ b/src/html/views/dev-signup.html
@@ -9,8 +9,8 @@
               <div class="firstscreen__header">
                 <div class="logo logo_main">Grand<span>Hook</span>Up</div>
               </div>
-              <div class="h1_login d-lg-none">Sign up&nbsp;<br class="d-md-none"><span class="colortitle">to unlock</span>&nbsp;<br class="d-md-none">girls</div>
-              <div class="h1_login d-none d-lg-block">Sign up<br><span class="h1_login-sub">to <span class="colortitle">unlock girls</span></span></div>
+              <div class="h1_login d-lg-none">Sign up&nbsp;<br class="d-md-none"><span class="colortitle1">to unlock</span>&nbsp;<br class="d-md-none">girls</div>
+              <div class="h1_login d-none d-lg-block">Sign up<br><span class="h1_login-sub">to <span class="colortitle1">unlock girls</span></span></div>
                 <form action="">
                   <div class="form-group form-group_login">
                     <input class="form-control form-control_login" type="text" placeholder="Email">
@@ -30,23 +30,30 @@
 
 
 
-    <div class="secondscreen">
-      <div class="container container_xxxl">
-        <div class="row align-items-center">
-          <div class="col-12 col-xl-3 pr-xl-5">
-            <h2 class="h2_index"><span>Release&nbsp;My</span><br>Combinations</h2>
-          </div>
-          <div class="col-12 col-xl-9 pl-xl-5">
-            <p>We have created a unique combination system that consists of three main factors that produce
-              similarity of thought and productive connections: Life, freedom and culture. NF, in an abbreviated
-              form, connects people who have interests in similar activities, passions and future aspirations. We
-              also add our own personal touch to the online dating process ensuring that your experience is
-              special and exclusive to you.</p>
-            <p>Instead of spending weeks looking for your best combination, we send you a personalized combination
-              every day by email. As these presentations have been carefully selected based on your NF (Life,
-              Freedom and Culture) score, you can spend more time talking or planning your first night out.</p>
+    <div class="secondscreen secondscreen_02">
+      <div class="d-xl-none">
+        <div class="timer">
+          <div class="timer_inner">
+            <div class="timer__title">Limited chance</div>
+            <div class="countdown-js" data-countdown-time="0-15-0"></div>
           </div>
         </div>
+        <div class="container container_xxxl">
+          <div class="h1_timer">to Look at<br><span class="colortitle2">these</span> cuties</div>
+        </div>
+      </div>
+      <div class="container container_xxxl">
+        <div class="d-none d-xl-flex align-items-xl-center">
+          <div class="timer">
+            <div class="timer_inner">
+              <div class="timer__title">Limited chance</div>
+              <div class="countdown-js" data-countdown-time="0-15-0"></div>
+            </div>
+          </div>
+          <div class="h1_timer">to Look at <span class="colortitle2">these</span> cuties</div>
+        </div>
+
+
       </div>
     </div>
   </main>
