--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 @import '~bootstrap/scss/bootstrap.scss';
 @import 'variables.scss';
+@import 'countdown.scss';
 @import 'fonts.scss';
 @import 'body.scss';
 @import 'typo.scss';
