--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -23,7 +23,6 @@
 }
 
 .firstscreen__bg {
-  //width: calc(100% - 15px);
   width: 305px;
   height: 322px;
   background-repeat: no-repeat;
@@ -168,5 +167,49 @@
       min-width: 530px;
       margin: 0 160px 0 0;
     }
+  }
+}
+
+.secondscreen {
+  &.secondscreen_1 {}
+  &.secondscreen_2 {}
+}
+
+.timer {
+  background-color: $bg_light_1;
+  width: 100%;
+  padding: 20px;
+  @media (min-width: 1200px) {
+    width: 480px;
+    padding: 20px 30px;
+  }
+}
+
+.timer_inner {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  @media (min-width: 380px) {
+    width: 280px;
+    margin: 0 auto;
+  }
+  @media (min-width: 1200px) {
+    width: 100%;
+    flex-direction: row;
+  }
+}
+
+.timer__title {
+  font-weight: 700;
+  font-size: 29px;
+  line-height: 35px;
+  color: $font_color2;
+  text-transform: uppercase;
+  margin: 0 0 10px 0;
+  text-align: center;
+  @media (min-width: 1200px) {
+    font-size: 31px;
+    line-height: 34px;
+    margin: 0 55px 0 0;
   }
 }
