--- a/src/html/views/dev-index.html
+++ b/src/html/views/dev-index.html
@@ -47,12 +47,12 @@
             <h2 class="h2_index"><span>Release&nbsp;My</span><br>Combinations</h2>
           </div>
           <div class="col-12 col-xl-9 pl-xl-5">
-            <p>We have created a unique combination system that consists of three main factors that produce
+            <p class="pmain">We have created a unique combination system that consists of three main factors that produce
               similarity of thought and productive connections: Life, freedom and culture. NF, in an abbreviated
               form, connects people who have interests in similar activities, passions and future aspirations. We
               also add our own personal touch to the online dating process ensuring that your experience is
               special and exclusive to you.</p>
-            <p>Instead of spending weeks looking for your best combination, we send you a personalized combination
+            <p class="pmain">Instead of spending weeks looking for your best combination, we send you a personalized combination
               every day by email. As these presentations have been carefully selected based on your NF (Life,
               Freedom and Culture) score, you can spend more time talking or planning your first night out.</p>
           </div>
