--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -171,8 +171,14 @@
 }
 
 .secondscreen {
+
   &.secondscreen_1 {}
-  &.secondscreen_2 {}
+
+  &.secondscreen_2 {
+    @media (min-width: 1200px) {
+      margin-top: 91px;
+    }
+  }
 }
 
 .timer {
@@ -212,4 +218,94 @@
     line-height: 34px;
     margin: 0 55px 0 0;
   }
+}
+
+.userfback {
+  width: 220px;
+  @media (min-width: 1200px) {
+    width: 310px;
+  }
+}
+
+.userfback__pic {
+  width: 124px;
+  height: 95px;
+  position: relative;
+  z-index: 20;
+  bottom: -15px;
+}
+
+.userfback__img {
+  width: 97px;
+  height: 85px;
+  position: absolute;
+  left: -1px;
+  bottom: 0;
+}
+
+.userfback__inf {
+  color: $font_color2;
+  font-weight: 500;
+  font-style: italic;
+  font-size: 15px;
+  line-height: 24px;
+  position: relative;
+  height: 248px;
+  min-height: 248px;
+  @media (min-width: 1200px) {
+    font-size: 19px;
+    line-height: 26px;
+    height: 235px;
+    min-height: 235px;
+  }
+
+  .userfback__bg {
+    background-color: $bg_light_1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: 248px;
+    z-index: 10;
+    padding: 43px 18px 26px;
+    @media (min-width: 1200px) {
+      padding: 43px 33px 50px;
+      min-height: 235px;
+    }
+  }
+
+  &::before {
+    content: '';
+    display: block;
+    width: 124px;
+    height: 95px;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    background-size: cover;
+    background-image: url('../img/bg/bg-photo-userfback.svg');
+    position: absolute;
+    z-index: 2;
+    top: -80px;
+  }
+
+  &::after {
+    content: '';
+    display: block;
+    background-color: $btn_bg_color;
+    width: 100%;
+    height: 190px;
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    z-index: 5;
+  }
+
+  p {
+    line-height: 24px;
+    margin-bottom: 9px;
+    @media (min-width: 992px) {
+      line-height: 26px;
+    }
+  }
+
 }
