--- a/src/html/views/dev-login.html
+++ b/src/html/views/dev-login.html
@@ -5,32 +5,29 @@
       <div class="firstscreen__content">
         <div class="container container_xxxl">
           <div class="firstscreen__content-inner">
-            <div class="firstscreen__info firstscreen__info3">
+            <div class="firstscreen__info firstscreen__info3" style="display: block;">
               <div class="firstscreen__header">
                 <div class="logo logo_main">Grand<span>Hook</span>Up</div>
               </div>
               <div class="h1_login d-lg-none">Enter <span class="colortitle1">email</span>&nbsp;<br class="d-md-none"><span class="h1_login-sub">to <span class="colortitle1">unlock</span> girls</span></div>
               <div class="h1_login d-none d-lg-block">Enter <span class="colortitle1">email</span><br><span class="h1_login-sub">to <span class="colortitle1">unlock girls</span></span></div>
-                <form action="">
-                  <div class="form-group form-group_login">
-                    <input class="form-control form-control_login" type="text" placeholder="Email">
-                  </div>
-                  <div class="form-group form-group_login">
-                    <input class="form-control form-control_login" type="password" placeholder="Password">
-                  </div>
-                  <div class="form-group form-group_login form-group_login-btn">
-                    <button class="btn-login btn btn_w100">Log in</button>
-                  </div>
-                </form>
+              <form action="">
+                <div class="form-group form-group_login">
+                  <input class="form-control form-control_login" type="text" placeholder="Email">
+                </div>
+                <div class="form-group form-group_login">
+                  <input class="form-control form-control_login" type="password" placeholder="Password">
+                </div>
+                <div class="form-group form-group_login form-group_login-btn">
+                  <button class="btn-login btn btn_w100">Log in</button>
+                </div>
+              </form>
             </div>
           </div>
         </div>
       </div>
     </header>
-
-
-
-    <div class="secondscreen secondscreen_2">
+    <section class="secondscreen secondscreen_2">
       <div class="d-xl-none">
         <div class="timer">
           <div class="timer_inner">
@@ -299,6 +296,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
   </main>
 <%= _.template(require('./../includes/footer.html'))() %>
