--- a/src/html/views/dev-index.html
+++ b/src/html/views/dev-index.html
@@ -1,63 +1,51 @@
 <%= _.template(require('./../includes/header-index.html'))() %>
   <main class="main">
-    <div class="firstscreen">
-      <div class="firstscreen__header d-xl-none">
-        <div class="logo logo_main">
-          <div class="logo__txt">sweet girls</div>
-          <div class="logo__img"></div>
-          <div class="logo__txt">gone wild</div>
-        </div>
-      </div>
-      <div class="firstscreen__bg">
-        <video autoplay muted loop class="bg-video">
-          <source src="img/bg/video.mp4" type="video/mp4">
-        </video>
-      </div>
+    <header class="firstscreen">
+      <div class="firstscreen__bg bg3"></div>
       <div class="firstscreen__content">
-        <div class="container container_xxxl container_index">
-          <div class="firstscreen__header d-none d-xl-block">
-            <div class="logo logo_main">
-              <div class="logo__txt">sweet girls</div>
-              <div class="logo__img"></div>
-              <div class="logo__txt">gone wild</div>
-            </div>
-          </div>
-          <div class="firstscreen__info firstscreen__info1" style="display: block">
-            <h1 class="h1_index">Amazing&nbsp;<br class="d-xl-none">Girls Is<br>Waiting Best<br>Matches For You</h1>
-            <button class="btn btn_1 btn-index">Unlock My Matches</button>
-          </div>
-          <div class="firstscreen__info firstscreen__info2" style="display: none;">
-            <div class="h1_search">Searching&nbsp;<br class="d-xl-none">the&nbsp;<br class="d-none d-xl-block">best&nbsp;<br class="d-sm-none">girls<br>Anylizing matches</div>
-            <div class="search-progress progress">
-              <div class="search-progress__title">
-                <span class="search-progress__span search-progress__span1" style="display: inline">Analize Your Location</span>
-                <span class="search-progress__span search-progress__span2" style="display: none">Analize Your Interests</span>
-                <span class="search-progress__span search-progress__span3" style="display: none">Analize Your Gender Match</span>
+        <div class="container container_xxxl">
+          <div class="firstscreen__content-inner">
+            <div class="firstscreen__info firstscreen__info1" style="display: block;">
+              <div class="firstscreen__header">
+                <div class="logo logo_main">Grand<span>Hook</span>Up</div>
               </div>
-              <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="h1-index">
+                <div class="h1-index__row1">Good girls</div>
+                <div class="h1-index__row2"><span>gonna</span> GO bad</div>
+                <div class="h1-index__row3">Here</div>
+              </div>
+              <button class="btn btn_1 btn-index">Unlock My Matches</button>
+            </div>
+            <div class="firstscreen__info firstscreen__info2" style="display: none;">
+              <div class="firstscreen__header">
+                <div class="logo logo_main">Grand<span>Hook</span>Up</div>
+              </div>
+              <div class="h1_search">Searching<br><span class="colortitle1">your best</span> matches</div>
+              <div class="search-progress progress">
+                <div class="search-progress__title">
+                  <span class="search-progress__span search-progress__span1" style="display: inline">by locations</span>
+                  <span class="search-progress__span search-progress__span2" style="display: none">by interests</span>
+                  <span class="search-progress__span search-progress__span3" style="display: none">by gender match</span>
+                </div>
+                <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="secondscreen">
-      <div class="container container_xxxl">
-        <div class="row align-items-center">
-          <div class="col-12 col-xl-3 pr-xl-5">
-            <h2 class="h2_index"><span>Release&nbsp;My</span><br>Combinations</h2>
-          </div>
-          <div class="col-12 col-xl-9 pl-xl-5">
-            <p class="pmain">We have created a unique combination system that consists of three main factors that produce
-              similarity of thought and productive connections: Life, freedom and culture. NF, in an abbreviated
-              form, connects people who have interests in similar activities, passions and future aspirations. We
-              also add our own personal touch to the online dating process ensuring that your experience is
-              special and exclusive to you.</p>
-            <p class="pmain">Instead of spending weeks looking for your best combination, we send you a personalized combination
-              every day by email. As these presentations have been carefully selected based on your NF (Life,
-              Freedom and Culture) score, you can spend more time talking or planning your first night out.</p>
-          </div>
-        </div>
+    </header>
+    <section class="secondscreen secondscreen_1">
+      <div class="container container_lg">
+        <h2 class="h2_index"><span class="colortitle2">Release</span>&nbsp;My<br><span class="h2_index2row">combinations</span></h2>
+        <p class="pmain">We have created a unique combination system that consists of three main factors that produce
+          similarity of thought and productive connections: Life, freedom and culture. NF, in an abbreviated
+          form, connects people who have interests in similar activities, passions and future aspirations. We
+          also add our own personal touch to the online dating process ensuring that your experience is
+          special and exclusive to you.</p>
+        <p class="pmain">Instead of spending weeks looking for your best combination, we send you a personalized combination
+          every day by email. As these presentations have been carefully selected based on your NF (Life,
+          Freedom and Culture) score, you can spend more time talking or planning your first night out.</p>
       </div>
-    </div>
+    </section>
   </main>
 <%= _.template(require('./../includes/footer.html'))() %>
