--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -99,34 +99,87 @@
 
 .firstscreen__header {
   padding: 27px 0 20px;
+  @media (min-width: 992px) {
+    padding: 27px 0 40px;
+  }
+  @media (min-width: 1200px) {
+    padding: 27px 0 50px;
+  }
   @media (min-width: 1400px) {
-    padding: 55px 0 43px;
+    padding: 55px 0 60px;
   }
   @media (min-width: 1650px) {
-    padding: 80px 0 50px;
+    padding: 80px 0 79px;
   }
   @media (min-width: 1920px) {
-    padding: 117px 0 58px;
+    padding: 117px 0 79px;
   }
 }
 
 .firstscreen__info {
+  display: none;
   width: 100%;
   @media (min-width: 992px) {
     width: 40%;
   }
 
   &.firstscreen__info1 {
-    @media (min-width: 1920px) {
-      width: 570px;
-      min-width: 570px;
+    @media (min-width: 768px) {
+      width: 380px;
+      min-width: 380px;
+      margin: 0 auto;
+    }
+    @media (min-width: 992px) {
+      width: 300px;
+      min-width: 300px;
+      margin: 0 150px 0 0;
+    }
+    @media (min-width: 1200px) {
+      width: 400px;
+      min-width: 400px;
+      margin: 0 110px 0 0;
+    }
+    @media (min-width: 1300px) {
+      margin: 0 135px 0 0;
+    }
+    @media (min-width: 1400px) {
+      width: 500px;
+      min-width: 500px;
+      margin: 0 95px 0 0;
+    }
+    @media (min-width: 1650px) {
+      width: 580px;
+      min-width: 580px;
+      margin: 0 115px 0 0;
     }
   }
 
   &.firstscreen__info2 {
-    @media (min-width: 1920px) {
+    @media (min-width: 768px) {
+      width: 380px;
+      min-width: 380px;
+      margin: 0 auto;
+    }
+    @media (min-width: 992px) {
+      width: 300px;
+      min-width: 300px;
+      margin: 0 150px 0 0;
+    }
+    @media (min-width: 1200px) {
+      width: 400px;
+      min-width: 400px;
+      margin: 0 110px 0 0;
+    }
+    @media (min-width: 1300px) {
+      margin: 0 135px 0 0;
+    }
+    @media (min-width: 1400px) {
       width: 480px;
       min-width: 480px;
+      margin: 0 95px 0 0;
+    }
+    @media (min-width: 1650px) {
+      margin: 0 219px 0 0;
     }
   }
 
@@ -166,6 +219,19 @@
       width: 530px;
       min-width: 530px;
       margin: 0 160px 0 0;
+    }
+
+    .firstscreen__header {
+      padding: 27px 0 20px;
+      @media (min-width: 1400px) {
+        padding: 55px 0 43px;
+      }
+      @media (min-width: 1650px) {
+        padding: 80px 0 50px;
+      }
+      @media (min-width: 1920px) {
+        padding: 117px 0 58px;
+      }
     }
   }
 }
@@ -308,4 +374,42 @@
     }
   }
 
+}
+
+.search-progress {
+  &.progress {
+    width: 100%;
+    height: 27px;
+    background-color: $bg_light_2;
+    border-radius: 0;
+    position: relative;
+    @media (min-width: 992px) {
+      height: 47px;
+    }
+  }
+  .progress-bar {
+    border: none;
+    border-radius: 0;
+    transition: width 0.2s linear;
+    background-color: $btn_bg_color;
+  }
+  .search-progress__title {
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -11px);
+    z-index: 10;
+    color: $font_color2;
+    font-family: $font_family2;
+    font-weight: 600;
+    font-style: italic;
+    font-size: 15px;
+    text-align: center;
+    text-transform: uppercase;
+    @media (min-width: 992px) {
+      font-size: 20px;
+      transform: translate(-50%, -15px);
+    }
+  }
 }
