--- a/src/scss/typo.scss
+++ b/src/scss/typo.scss
@@ -1,82 +1,194 @@
 h1 {
   font-family: $font_family;
   font-weight: 700;
-  font-size: 51px;
-  line-height: 45px;
+  font-size: 44px;
+  line-height: 53px;
   color: $font_color;
   margin-bottom: 34px;
   text-align: center;
-  @media (min-width: 1200px) {
-    font-size: 87px;
-    line-height: 97px;
+  @media (min-width: 1920px) {
+    font-size: 86px;
+    line-height: 104px;
     margin-bottom: 55px;
   }
-  .h1_2ndrow {
-    font-weight: 300;
-    font-size: 39px;
-    line-height: 44px;
-    @media (min-width: 1200px) {
-      font-size: inherit;
-      line-height: inherit;
+}
+
+.h1-index {
+  display: flex;
+  flex-direction: column;
+  font-family: $font_family;
+  color: $font_color;
+  font-weight: 700;
+  font-size: 44px;
+  line-height: 53px;
+  margin: 0 0 18px;
+  text-transform: uppercase;
+  position: relative;
+  @media (min-width: 768px) {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  @media (min-width: 1200px) {
+    margin: 0 0 30px;
+  }
+  @media (min-width: 1400px) {
+    margin: 0 0 40px;
+  }
+  @media (min-width: 1650px) {
+    font-size: 86px;
+    line-height: 104px;
+    margin: 0 0 57px;
+  }
+
+  &::before {
+    @media (min-width: 768px) {
+      content: '“';
+      position: absolute;
+      top: -3px;
+      left: -25px;
+      line-height: 1;
+      font-size: 44px;
+    }
+    @media (min-width: 1400px) {
+      top: -3px;
+      left: -40px;
+      font-size: 65px;
+    }
+    @media (min-width: 1650px) {
+      top: -3px;
+      left: -50px;
+      font-size: 83px;
     }
   }
-  &.h1_index {
-    color: $font_color2;
-    font-weight: 700;
-    font-size: 42px;
-    line-height: 60px;
-    margin: 0 0 31px;
-    text-align: center;
-    text-transform: uppercase;
+
+  .h1-index__row1 {
+    font-size: 44px;
+    line-height: 53px;
+    @media (min-width: 768px) {
+      width: 150px;
+    }
     @media (min-width: 1200px) {
-      width: 671px;
-      text-align: left;
+      width: 168px;
       font-size: 50px;
-      line-height: 78px;
-      margin: 0 0 75px;
+      line-height: 62px;
     }
-    @media (min-width: 1500px) {
-      width: 671px;
-      font-size: 57px;
-      line-height: 95px;
-      margin: 0 0 75px;
+    @media (min-width: 1400px) {
+      width: 225px;
+      font-size: 66px;
+      line-height: 75px;
     }
-    @media (min-width: 1920px) {
-      width: 671px;
-      font-size: 67px;
-      line-height: 122px;
-      margin: 0 0 87px;
+    @media (min-width: 1650px) {
+      width: 285px;
+      font-size: 86px;
+      line-height: 104px;
+    }
+  }
+  .h1-index__row2 {
+    font-size: 35px;
+    line-height: 1;
+    color: $btn_bg_color;
+    @media (min-width: 768px) {
+      width: 140px;
+      line-height: 52px;
+    }
+    @media (min-width: 1200px) {
+      width: 180px;
+      font-size: 44px;
+      line-height: 61px;
+    }
+    @media (min-width: 1400px) {
+      width: 250px;
+      font-size: 62px;
+      line-height: 73px;
+    }
+    @media (min-width: 1650px) {
+      width: 290px;
+      font-size: 76px;
+      line-height: 102px;
+      letter-spacing: -4px;
+    }
+    span {
+      text-transform: none;
+      font-size: 41px;
+      @media (min-width: 1200px) {
+        font-size: 50px;
+      }
+      @media (min-width: 1400px) {
+        font-size: 70px;
+      }
+      @media (min-width: 1650px) {
+        font-size: 92px;
+        letter-spacing: 0;
+      }
+    }
+  }
+  .h1-index__row3 {
+    font-size: 49px;
+    line-height: 59px;
+    position: relative;
+    margin: 8px 0 0;
+    @media (min-width: 768px) {
+      font-size: 58px;
+      line-height: 66px;
+      margin: 0;
+    }
+    @media (min-width: 1200px) {
+      font-size: 66px;
+      line-height: 80px;
+    }
+    @media (min-width: 1400px) {
+      font-size: 90px;
+      line-height: 100px;
+    }
+    @media (min-width: 1650px) {
+      font-size: 110px;
+      line-height: 133px;
+    }
+
+    &::after {
+      @media (min-width: 768px) {
+        content: '”';
+        position: absolute;
+        bottom: -22px;
+        right: -30px;
+        line-height: 1;
+        font-size: 44px;
+      }
+      @media (min-width: 1400px) {
+        bottom: -28px;
+        right: -40px;
+        font-size: 65px;
+      }
+      @media (min-width: 1650px) {
+        bottom: -34px;
+        right: -50px;
+        font-size: 83px;
+      }
     }
   }
 }
 
 .h1_search {
-  font-family: $font_family2;
+  font-family: $font_family;
   font-weight: 700;
-  color: $font_color2;
-  font-size: 42px;
-  line-height: 60px;
+  color: $font_color;
+  font-size: 41px;
+  line-height: 50px;
   margin: 0 0 31px;
-  text-align: center;
   text-transform: uppercase;
-  @media (min-width: 1200px) {
-    width: 671px;
-    text-align: left;
+  @media (min-width: 992px) {
     font-size: 50px;
-    line-height: 78px;
-    margin: 0 0 75px;
+    line-height: 60px;
   }
-  @media (min-width: 1500px) {
-    width: 671px;
-    font-size: 57px;
-    line-height: 95px;
-    margin: 0 0 75px;
+  @media (min-width: 1200px) {
+    font-size: 66px;
+    line-height: 80px;
+    margin: 0 0 50px;
   }
-  @media (min-width: 1920px) {
-    width: 671px;
-    font-size: 61px;
-    line-height: 122px;
-    margin: 0 0 87px;
+  @media (min-width: 1400px) {
+    font-size: 80px;
+    line-height: 97px;
+    margin: 0 0 64px;
   }
 }
 
@@ -213,42 +325,45 @@ h2 {
   }
 
   &.h2_index {
-    font-size: 31px;
-    line-height: 56px;
-    margin-bottom: 51px;
+    font-size: 44px;
+    line-height: 53px;
+    margin-bottom: 20px;
+    text-align: center;
+    color: $btn_bg_color;
     text-transform: uppercase;
+    @media (min-width: 768px) {
+      margin-bottom: 45px;
+    }
     @media (min-width: 992px) {
-      font-size: 31px;
-      line-height: 56px;
-      margin-bottom: 51px;
+      text-align: center;
+      font-size: 60px;
+      line-height: 68px;
+      margin-bottom: 50px;
     }
     @media (min-width: 1200px) {
-      font-size: 50px;
-      line-height: 70px;
-      margin-bottom: 51px;
-      text-align: left;
-      width: 400px;
-      transform: rotate(-90deg) translate(0, -135px);
+      font-size: 75px;
+      line-height: 85px;
     }
-    @media (min-width: 1500px) {
-      font-size: 65px;
-      line-height: 122px;
-      margin-bottom: 52px;
-      width: 520px;
-      transform: rotate(-90deg) translate(0, -160px);
+    @media (min-width: 1650px) {
+      font-size: 94px;
+      line-height: 114px;
+      margin-bottom: 60px;
     }
-    span {
-      font-size: 37px;
-      letter-spacing: 5px;
+    span.h2_index2row {
+      font-size: 42px;
+      line-height: 51px;
+      text-transform: none;
       @media (min-width: 992px) {
-        font-size: 37px;
+        font-size: 57px;
+        line-height: 68px;
       }
       @media (min-width: 1200px) {
-        font-size: 58px;
-      }
-      @media (min-width: 1500px) {
         font-size: 70px;
-        letter-spacing: 10px;
+        line-height: 85px;
+      }
+      @media (min-width: 1650px) {
+        font-size: 92px;
+        line-height: 111px;
       }
     }
   }
@@ -311,29 +426,19 @@ p {
   }
 }
 
-.container_text-center {
-  p {
-    text-align: center;
-    @media (min-width: 992px) {
-      text-align: center;
-    }
-  }
-}
 .secondscreen {
   p.pmain {
     font-size: 15px;
-    line-height: 42px !important;
-    text-align: center;
+    line-height: 24px !important;
+    margin-bottom: 2rem;
     @media (min-width: 768px) {
-      line-height: 42px !important;
-    }
-    @media (min-width: 1200px) {
-      text-align: left;
-      line-height: 50px !important;
-      font-size: 22px !important;
+      text-align: center;
+      font-size: 20px !important;
+      line-height: 28px !important;
     }
   }
 }
+
 a {
   color: $link_color;
   text-decoration: none;
