--- a/src/html/views/dev-index.html
+++ b/src/html/views/dev-index.html
@@ -34,7 +34,7 @@
         </div>
       </div>
     </header>
-    <section class="secondscreen secondscreen_1">
+    <section class="secondscreen secondscreen_1" style="display: block;">
       <div class="container container_lg">
         <h2 class="h2_index"><span class="colortitle2">Release</span>&nbsp;My<br><span class="h2_index2row">combinations</span></h2>
         <p class="pmain">We have created a unique combination system that consists of three main factors that produce
