--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,6 @@
 @import 'slider.scss';
 @import 'user-profile.scss';
 @import 'user-list.scss';
-// @import 'index.scss';
 @import 'logo.scss';
+@import 'utils.scss';
 @import 'footer.scss';
