--- a/src/html/views/dev-signup.html
+++ b/src/html/views/dev-signup.html
@@ -27,7 +27,7 @@
         </div>
       </div>
     </header>
-    <section class="secondscreen secondscreen_2">
+    <section class="secondscreen secondscreen_2" style="display: block;">
       <div class="d-xl-none">
         <div class="timer">
           <div class="timer_inner">
