--- a/src/scss/user-list.scss
+++ b/src/scss/user-list.scss
@@ -39,7 +39,7 @@
       background-size: cover;
       position: relative;
 
-      @include img-mask('../img/photos/mask.svg', 0, 0, 100% , 100%, auto, 0% 0%);
+      @include img-mask('../img/photos/mask1.svg', 0, 0, 100%, 100%, auto, 0% 0%);
     }
   }
 
