fix font fot user_list and user_profile

--- a/src/scss/user-list.scss
+++ b/src/scss/user-list.scss
@@ -70,6 +70,7 @@
     .user-list-item__name {
       font-family: $font_family2;
       font-weight: 600;
+      font-style: italic;
       color: $font_color2;
       line-height: 1;
       font-size: 15px;
