--- a/src/scss/user-profile.scss
+++ b/src/scss/user-profile.scss
@@ -114,6 +114,7 @@
 .userprofile__name {
   font-family: $font_family2;
   font-weight: 600;
+  font-style: italic;
   font-size: 30px;
   margin: 0 0 20px 0;
   text-transform: uppercase;
@@ -189,6 +190,7 @@
     font-family: $font_family2;
     color: $font_color2;
     font-weight: 600;
+    font-style: italic;
     font-size: 14px;
     margin-bottom: 14px;
     text-transform: uppercase;
