--- a/src/html/views/dev-index.html
+++ b/src/html/views/dev-index.html
@@ -11,8 +11,8 @@
               </div>
               <div class="h1-index">
                 <div class="h1-index__row1">Good girls</div>
-                <div class="h1-index__row2"><span>gonna</span> GO bad</div>
-                <div class="h1-index__row3">Here</div>
+                <div class="h1-index__row2">gonna go bad</div>
+                <div class="h1-index__row3">here</div>
               </div>
               <button class="btn btn_1 btn-index">Unlock My Matches</button>
             </div>
